Style: Fix position of user dropdown on small devices

--- a/assets/stylesheets/NavBar/UserDropdown.scss
+++ b/assets/stylesheets/NavBar/UserDropdown.scss
@@ -4,6 +4,11 @@
   z-index: 2;
   width: 100vw;
   height: 100vh;
+  $small-width: 520px;
+
+  @media (max-width: $small-width) {
+    right: -35px;
+  }
 
   .dropdown {
     top: 50px;
